--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jest": "^26.6.3",
+    "mongoose": "^5.12.9",
     "nodemon": "^2.0.7"
   }
 }
